<resources>
    <string name="app_name">Cinema Time</string>
    <string name="onboard_text">Before we start let\'s set your preferences</string>
    <string name="ActorsButton">Actors</string>
    <string name="GeneresButton">Generes</string>
    <string name="title_activity_search_screen">SearchScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Oanta Daniel</string>
    <string name="nav_header_subtitle">daniel.oanta@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movie_title">The Movie Title</string>
    <string name="movie_description">this is the movie description, the movie is awesome, it is about a young man in shis yellow submarine, andhe loves to swim</string>
    <string name="movie_mock_date">20-20-2020</string>
    <string name="mock_actor_name">John Doe</string>
    <string name="mock_genre">Action</string>
    <string name="title_activity_tabbed_main">TabbedMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="movie_budget">650000</string>
    <string name="vote_average_mock">9.89</string>
    <string name="voteCount_mock">300</string>
</resources>