<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/cinema_hall"
    android:backgroundTint="#9F133220"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/tv_onboardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboard_text"
        android:textStyle="bold"
        android:textSize="@dimen/onboard_text_size"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textColor="@color/white"
         />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <Button
        style="@style/Button"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActorsButton"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        />

    <Button

        style="@style/Button"
        android:id="@+id/btnGeneres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GeneresButton"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        />
</LinearLayout>


</LinearLayout>